--- a/client/app/components/prio/prio.component.html
+++ b/client/app/components/prio/prio.component.html
@@ -29,7 +29,36 @@
 <div *ngIf="(selector == 'endProduct')" class="container">
     <h4>Nach Endprodukten:</h4>
 
-    <div></div>
+    <div class="row">
+        <div class="col-sm-3">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    Endprodukte:
+                </div>
+                <div class="panel-body">
+                    <ul class="list-group" dnd-sortable-container [sortableData]="pParts">
+                        <li *ngFor="let item of pParts; let i = index" class="list-group-item" dnd-sortable [sortableIndex]="i">{{i + 1}}. {{item.typ}} {{item.nummer}}</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    My priorization:<br/>
+                    <span *ngFor="let item of pParts; let i = index">{{i + 1}}) {{item.typ}} {{item.nummer}} ({{item.bezeichnung}})<br/></span>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    Leerzeiten:<br/>
+                    <span> 10000 Minuten<br/></span>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div *ngIf="(selector == 'manual')" class="container">
     <h4>Alles Manuell:</h4>
@@ -47,7 +76,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-3">
             <div class="panel panel-default">
                 <div class="panel-body">
                     My priorization:<br/>
