--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -28,6 +28,9 @@
                 <a>{{'sidebar_productView' | translate}}<span class="menu-icon fa fa-eye"></span></a>
             </li>
             <li class="sidebar-list">
+                <a routerLink="/materialPlanningEP" routerLinkActive="active">Dispo EP<span class="menu-icon fa fa-truck"></span></a>
+            </li>
+            <li class="sidebar-list">
                 <a routerLink="/materialPlanning" routerLinkActive="active">{{'sidebar_materialPlanning' | translate}}<span class="menu-icon fa fa-shopping-cart"></span></a>
             </li>
             <li class="sidebar-list">
