--- a/client/app/components/materialPlanningEP/materialPlanningEP.component.html
+++ b/client/app/components/materialPlanningEP/materialPlanningEP.component.html
@@ -32,33 +32,38 @@
             <th></th>
             <th></th>
             <th></th>
-            <th>Gepl. Lager Ende</th>
+            <th>Gepl. Lager Ende Planperiode</th>
             <th></th>
-            <th>Lagerbestand Vorper</th>
+            <th>Lagerbestand Vorperiode</th>
             <th></th>
-            <th>Aufträge Warteschl</th>
+            <th>Aufträge Warteschlange</th>
             <th></th>
-            <th>Aufträge Bearb</th>
+            <th>Aufträge Bearbeitung</th>
             <th></th>
-            <th></th>
+            <th>Produktionsaufträge</th>
         </tr>
         </thead>
         <tbody>
         <tr *ngFor="let part of partsList">
-            <td>{{part.typ + part.nummer}}</td>
-            <td><input type="text" class="form-control"></td>
-            <td>+</td>
-            <td><input type="text" class="form-control"></td>
-            <td>+</td>
-            <td><input type="text" class="form-control"></td>
-            <td>-</td>
-            <td><input type="text" class="form-control"></td>
-            <td>-</td>
-            <td><input type="text" class="form-control"></td>
-            <td>-</td>
-            <td><input type="text" class="form-control"></td>
-            <td>=</td>
-            <td><input type="text" class="form-control"></td>
+            <td width="4%" align="left">{{part.child.typ + part.child.nummer}}</td>
+            <td width="10%"><input type="number" class="form-control" [(ngModel)]="auftraegeVerbindl[part.child.nummer]" readonly></td>
+
+            <td *ngIf="part.child.typ !== 'P'" width="4%" align="center">+</td>
+            <td *ngIf="part.child.typ !== 'P'" width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeWarteschlAddiert[part.child.nummer]" readonly></td>
+            <td *ngIf="part.child.typ !== 'P'" width="4%" align="center">+</td>
+
+            <td *ngIf="part.child.typ === 'P'" width="4%" colspan="3" align="center">+</td>
+
+            <td width="10%" align="center"><input type="number" class="form-control" min="0" [(ngModel)]="geplLagerbestand[part.child.nummer]" (ngModelChange)="updateArrays()"></td>
+            <td width="4%" align="center">-</td>
+            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="lagerbestandVorperiode[part.child.nummer]" readonly></td>
+            <td width="4%" align="center">-</td>
+            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeWarteschl[part.child.nummer]" readonly></td>
+            <td width="4%" align="center">-</td>
+            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeBearb[part.child.nummer]" readonly></td>
+            <td width="4%" align="center">=</td>
+            <td width="12%" align="center"><input type="number" class="form-control" [(ngModel)]="prodAuftraege[part.child.nummer]" readonly></td>
+            <br><br>
         </tr>
 
         </tbody>
