--- a/client/app/components/materialPlanningEP/materialPlanningEP.component.html
+++ b/client/app/components/materialPlanningEP/materialPlanningEP.component.html
@@ -44,25 +44,25 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let part of partsList">
-            <td width="4%" align="left">{{part.child.typ + part.child.nummer}}</td>
-            <td width="10%"><input type="number" class="form-control" [(ngModel)]="auftraegeVerbindl[part.child.nummer]" readonly></td>
+        <tr *ngFor="let pt of partsList">
+            <td width="4%" align="left">{{pt.child.typ + pt.child.nummer}}</td>
+            <td width="10%"><input type="number" class="form-control" [(ngModel)]="auftraegeVerbindl[part.typ + part.nummer + '_' + pt.child.nummer]" readonly></td>
 
-            <td *ngIf="part.child.typ !== 'P'" width="4%" align="center">+</td>
-            <td *ngIf="part.child.typ !== 'P'" width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeWarteschlAddiert[part.child.nummer]" readonly></td>
-            <td *ngIf="part.child.typ !== 'P'" width="4%" align="center">+</td>
+            <td *ngIf="pt.child.typ !== 'P'" width="4%" align="center">+</td>
+            <td *ngIf="pt.child.typ !== 'P'" width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeWarteschlAddiert[part.typ + part.nummer + '_' + pt.child.nummer]" readonly></td>
+            <td *ngIf="pt.child.typ !== 'P'" width="4%" align="center">+</td>
 
-            <td *ngIf="part.child.typ === 'P'" width="4%" colspan="3" align="center">+</td>
+            <td *ngIf="pt.child.typ === 'P'" width="4%" colspan="3" align="center">+</td>
 
-            <td width="10%" align="center"><input type="number" class="form-control" min="0" [(ngModel)]="geplLagerbestand[part.child.nummer]" (ngModelChange)="updateArrays()"></td>
+            <td width="10%" align="center"><input type="number" class="form-control" min="0" [(ngModel)]="geplLagerbestand[part.typ + part.nummer + '_' + pt.child.nummer]" (ngModelChange)="updateArrays()"></td>
             <td width="4%" align="center">-</td>
-            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="lagerbestandVorperiode[part.child.nummer]" readonly></td>
+            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="lagerbestandVorperiode[part.typ + part.nummer + '_' + pt.child.nummer]" readonly></td>
             <td width="4%" align="center">-</td>
-            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeWarteschl[part.child.nummer]" readonly></td>
+            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeWarteschl[part.typ + part.nummer + '_' + pt.child.nummer]" readonly></td>
             <td width="4%" align="center">-</td>
-            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeBearb[part.child.nummer]" readonly></td>
+            <td width="10%" align="center"><input type="number" class="form-control" [(ngModel)]="auftraegeBearb[part.typ + part.nummer + '_' + pt.child.nummer]" readonly></td>
             <td width="4%" align="center">=</td>
-            <td width="12%" align="center"><input type="number" class="form-control" [(ngModel)]="prodAuftraege[part.child.nummer]" readonly></td>
+            <td width="12%" align="center"><input type="number" class="form-control" [(ngModel)]="prodAuftraege[part.typ + part.nummer + '_' + pt.child.nummer]" readonly></td>
             <br><br>
         </tr>
 
