Prediction "Geplant" u. Weitergabe an MP

--- a/client/app/components/prediction/prediction.component.html
+++ b/client/app/components/prediction/prediction.component.html
@@ -28,7 +28,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let r of rowtable">
+        <tr *ngFor="let r of rowtable1">
             <td>{{r.produktkennung}}</td>
             <td *ngFor="let p of r.produktmengen">{{p}}</td>
         </tr>
@@ -48,27 +48,14 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <th scope="row">{{'product' | translate}} 1</th>
-            <td *ngFor="let planning of plannings"><input type="text" value="{{ planning.produkte[0].menge }}"
-                                                          class="form-control"></td>
-        </tr>
-        <tr>
-            <th scope="row">{{'product' | translate}} 2</th>
-            <td *ngFor="let planning of plannings"><input type="text" value="{{ planning.produkte[1].menge }}"
-                                                          class="form-control"></td>
-        </tr>
-        <tr>
-            <th scope="row">{{'product' | translate}} 3</th>
-            <td *ngFor="let planning of plannings"><input type="text" value="{{ planning.produkte[2].menge }}"
-                                                          class="form-control"></td>
-        </tr>
-        <tr>
-            <th scope="row">{{'sum' | translate}}</th>
-            <td *ngFor="let sumPl of sumsPl">{{ sumPl }}</td>
+        <tr *ngFor="let r of rowtable2">
+            <td>{{r.produktkennung}}</td>
+            <td *ngFor="let p of r.produktmengen"><input type="text" value="{{ p }}"
+                                                         class="form-control"></td>
         </tr>
         </tbody>
     </table>
+
     <h2>{{'remaining_stock' | translate}}</h2>
     <table class="table">
         <thead>
