Added Chart for Warehousestock

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -47,7 +47,7 @@
                 <a>{{'sidebar_waitingWorkst' | translate}}<span class="menu-icon fa fa-stop-circle"></span></a>
             </li>
             <li class="sidebar-list">
-                <a>{{'sidebar_warehouseStock' | translate}}<span class="menu-icon fa fa-bar-chart"></span></a>
+                <a routerLink="/warehousestock" routerLinkActive="active">{{'sidebar_warehouseStock' | translate}}<span class="menu-icon fa fa-bar-chart"></span></a>
             </li>
             <li class="sidebar-list">
                 <a>{{'sidebar_history' | translate}}<span class="menu-icon fa fa-history"></span></a>
