--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -76,7 +76,7 @@
         </td>
         <td id="Mengeohbest" [ngClass]="{red: m.isneg}">{{m.mengeohbest}}</td>
         <td></td>
-        <td></td>
+        <td>{{m.bestellung}}</td>
         <td></td>
         <td></td>
         <td></td>
