--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -28,7 +28,7 @@
                 <a>{{'sidebar_productView' | translate}}<span class="menu-icon fa fa-eye"></span></a>
             </li>
             <li class="sidebar-list">
-                <a routerLink="/materialPlanningEP" routerLinkActive="active">Dispo EP<span class="menu-icon fa fa-truck"></span></a>
+                <a routerLink="/materialPlanningEP" routerLinkActive="active">Dispo EP##<span class="menu-icon fa fa-truck"></span></a>
             </li>
             <li class="sidebar-list">
                 <a routerLink="/materialPlanning" routerLinkActive="active">{{'sidebar_materialPlanning' | translate}}<span class="menu-icon fa fa-shopping-cart"></span></a>
@@ -40,6 +40,9 @@
                 <a routerLink="/prioritization" routerLinkActive="active">{{'sidebar_prio' | translate}}<span class="menu-icon fa fa-sort "></span></a>
             </li>
             <li class="sidebar-title"><span>{{'sidebar_overview' | translate}}</span></li>
+            <li class="sidebar-list">
+                <a routerLink="/kpartAllocation" routerLinkActive="active">Kpart Zuordnung##<span class="menu-icon fa fa-bar-chart"></span></a>
+            </li>
             <li class="sidebar-list">
                 <a>{{'sidebar_ordersWork' | translate}}<span class="menu-icon fa fa-cogs"></span></a>
             </li>
