--- a/client/app/components/materialPlanningEP/materialPlanningEP.component.html
+++ b/client/app/components/materialPlanningEP/materialPlanningEP.component.html
@@ -1,16 +1,15 @@
-<!-- <div class="well">
-    <div class="">
-        <div class="row">
-            <h2>Kapazitätsplanung</h2>
-            <ul class="breadcrumb">
-                <li class="completed"><a routerLink="/xmlImport" routerLinkActive="active">{{'xmlImport' | translate}}</a></li>
-                <li class="completed"><a routerLink="/prediction" routerLinkActive="active">{{'prediction_planning' | translate}}</a></li>
-                <li class="completed"><a routerLink="/materialPlanning" routerLinkActive="active">{{'material_Planning' | translate}}</a></li>
-                <li class="active"><a routerLink="/capacityPlanning" routerLinkActive="active">{{'capacity_planning' | translate}}</a></li>
-            </ul>
-        </div>
+<div class="well text-center">
+    <h2 style="margin-bottom: 20px; margin-top: 0px;">{{'material_Planning' | translate}} EP</h2>
+    <div id="bc1" class="myBreadcrumb">
+        <a class="completed" routerLink="/xmlImport"><div>{{'xmlImport' | translate}}</div></a>
+        <a class="completed" routerLink="/prediction"><div>{{'prediction_planning' | translate}}</div></a>
+        <a class="completed" routerLink="/materialPlanning"><div>{{'material_Planning' | translate}}</div></a>
+        <a class="active" routerLink="//materialPlanningEP"><div>{{'material_Planning' | translate}} 2</div></a>
+        <a class="" routerLink="/prioritization"><div>{{'sidebar_prio' | translate}}</div></a>
+        <a class="" routerLink="/capacityPlanning"><div>{{'capacity_planning' | translate}}</div></a>
+        <a class="" routerLink="/xmlExport"><div>{{'xmlExport' | translate}}</div></a>
     </div>
-</div> -->
+</div>
 
 <div class="form-group">
     <label for="mpEP_pparts">Produkt</label>
