--- a/client/app/components/prediction/prediction.component.html
+++ b/client/app/components/prediction/prediction.component.html
@@ -1,18 +1,13 @@
-<div class="well">
-    <div class="">
-        <div class="row">
-            <h2>Prognose</h2>
-            <ul class="breadcrumb">
-                <li class="completed"><a routerLink="/xmlImport" routerLinkActive="active">{{'xmlImport' |
-                    translate}}</a></li>
-                <li class="active"><a routerLink="/prediction" routerLinkActive="active">{{'prediction_planning' |
-                    translate}}</a></li>
-                <li class=""><a routerLink="/materialPlanning" routerLinkActive="active">{{'material_Planning' |
-                    translate}}</a></li>
-                <li class=""><a routerLink="/capacityPlanning" routerLinkActive="active">{{'capacity_planning' |
-                    translate}}</a></li>
-            </ul>
-        </div>
+<div class="well text-center">
+    <h2 style="margin-bottom: 20px; margin-top: 0px;">{{'prediction_planning' | translate}}</h2>
+    <div id="bc1" class="myBreadcrumb">
+        <a class="completed" routerLink="/xmlImport"><div>{{'xmlImport' | translate}}</div></a>
+        <a class="active" routerLink="/prediction"><div>{{'prediction_planning' | translate}}</div></a>
+        <a class="" routerLink="/materialPlanning"><div>{{'material_Planning' | translate}}</div></a>
+        <a class="" routerLink="//materialPlanningEP"><div>{{'material_Planning' | translate}} 2</div></a>
+        <a class="" routerLink="/prioritization"><div>{{'sidebar_prio' | translate}}</div></a>
+        <a class="" routerLink="/capacityPlanning"><div>{{'capacity_planning' | translate}}</div></a>
+        <a class="" routerLink="/xmlExport"><div>{{'xmlExport' | translate}}</div></a>
     </div>
 </div>
 <ul>
