--- a/client/app/components/prio/prio.component.html
+++ b/client/app/components/prio/prio.component.html
@@ -1,10 +1,13 @@
-<div class="well">
-    <div class="">
-        <div class="row">
-            <span>
-                <h2>{{'sidebar_prio' | translate}}</h2>
-            </span>
-        </div>
+<div class="well text-center">
+    <h2 style="margin-bottom: 20px; margin-top: 0px;">{{'sidebar_prio' | translate}}</h2>
+    <div id="bc1" class="myBreadcrumb">
+        <a class="completed" routerLink="/xmlImport"><div>{{'xmlImport' | translate}}</div></a>
+        <a class="completed" routerLink="/prediction"><div>{{'prediction_planning' | translate}}</div></a>
+        <a class="completed" routerLink="/materialPlanning"><div>{{'material_Planning' | translate}}</div></a>
+        <a class="completed" routerLink="//materialPlanningEP"><div>{{'material_Planning' | translate}} 2</div></a>
+        <a class="active" routerLink="/prioritization"><div>{{'sidebar_prio' | translate}}</div></a>
+        <a class="" routerLink="/capacityPlanning"><div>{{'capacity_planning' | translate}}</div></a>
+        <a class="" routerLink="/xmlExport"><div>{{'xmlExport' | translate}}</div></a>
     </div>
 </div>
 
