--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -11,39 +11,10 @@
     </div>
 </div>
 
-<script>
-    angular.module('myApp', ['ui.bootstrap'])
-        .controller('myCtrl', ['$scope',
-            function ($scope) {
 
-                $scope.rows = [1, 2, 3, 4, 5, 6, 7, 8, 9];
-
-                $scope.items = [
-                    'The first choice!',
-                    'And another choice for you.',
-                    'but wait! A third!'
-                ];
-
-                $scope.status = {
-                    isopen: false
-                };
-
-                $scope.toggled = function (open) {
-                    console.log('Dropdown is now: ', open);
-                };
-
-                $scope.toggleDropdown = function ($event) {
-                    $event.preventDefault();
-                    $event.stopPropagation();
-                    $scope.status.isopen = !$scope.status.isopen;
-                };
-
-            }
-        ]);
-</script>
 <body ng-app="myApp">
 
-<table class="table-responsive table-bordered table-striped" onload="setColspan()">
+<table class="table-responsive table-bordered table-striped" onload="setLayout()">
     <caption width="100%" class="text-center">{{'material_Planning' | translate}}</caption>
     <thead>
     <tr>
@@ -56,9 +27,10 @@
         <th colspan="1" class="text-center">{{'opening_stock' | translate}}</th>
         <th id="Bruttobedarf" class="text-center">{{'gross_requirements_period' | translate}}</th>
         <th colspan="1" class="text-center">{{'sum_without_order' | translate}}</th>
+        <th colspan="1" class="text-center">{{'sum_with_order' | translate}}</th>
         <th colspan="1" class="text-center">{{'volume_ordered' | translate}}</th>
         <th colspan="1" class="text-center">{{'ordertype' | translate}}</th>
-        <th colspan="1" class="text-center">{{'stock_after_receipt' | translate}}</th>
+        <th id="Bestand" colspan="1" class="text-center">{{'stock_after_receipt' | translate}}</th>
     </tr>
 
     <tr>
@@ -74,7 +46,7 @@
         <th></th>
         <th></th>
         <th></th>
-        <th></th>
+        <th *ngFor="let p of periodrow" scope="col" class="text-center">{{p}}</th>
         <th></th>
         <th></th>
         <th></th>
@@ -93,6 +65,7 @@
         <td class="text-center">{{m.anfangsbestand}}</td>
         <td class="text-center" *ngFor="let b of m.bruttobedarfnP">{{b}}</td>
         <td class="text-center" [ngClass]="{red: m.isneg}">{{m.mengeohbest}}</td>
+        <td class="text-center" [ngClass]="{red: m.isneg2}">{{m.mengemitbest}}</td>
         <td><input [value]="m.bestellmenge" type="number" (input)="bestellmengeChange($event.target.value, i)"></td>
         <td>
             <div width="50px" class="btn-group">
@@ -116,4 +89,5 @@
     </tr>
     </tbody>
 </table>
+<button type="button" class="btn-lg btn-primary" (click)="clearSession()"> Reset Session</button>
 </body>
