TranslateService changed to singleton, Added some languages

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -28,7 +28,7 @@
                 <a>{{'sidebar_productView' | translate}}<span class="menu-icon fa fa-eye"></span></a>
             </li>
             <li class="sidebar-list">
-                <a routerLink="/materialPlanningEP" routerLinkActive="active">Dispo EP##<span class="menu-icon fa fa-truck"></span></a>
+                <a routerLink="/materialPlanningEP" routerLinkActive="active">{{'sideBar_MaterialPlanningEP' | translate}}<span class="menu-icon fa fa-truck"></span></a>
             </li>
             <li class="sidebar-list">
                 <a routerLink="/materialPlanning" routerLinkActive="active">{{'sidebar_materialPlanning' | translate}}<span class="menu-icon fa fa-shopping-cart"></span></a>
@@ -41,7 +41,7 @@
             </li>
             <li class="sidebar-title"><span>{{'sidebar_overview' | translate}}</span></li>
             <li class="sidebar-list">
-                <a routerLink="/kpartAllocation" routerLinkActive="active">Kpart Zuordnung##<span class="menu-icon fa fa-bar-chart"></span></a>
+                <a routerLink="/kpartAllocation" routerLinkActive="active">{{'sideBar_PartUsage' | translate}}<span class="menu-icon fa fa-bar-chart"></span></a>
             </li>
             <li class="sidebar-list">
                 <a>{{'sidebar_ordersWork' | translate}}<span class="menu-icon fa fa-cogs"></span></a>
@@ -66,23 +66,6 @@
                 <a routerLink="/parts" routerLinkActive="active">{{'sidebar_parts' | translate}}<span class="menu-icon fa fa-cube"></span></a>
             </li>
         </ul>
-        <div class="sidebar-footer">
-            <div class="col-xs-4">
-                <a href="https://github.com/ziyasal/rdash-angular2" target="_blank">
-                    Github
-                </a>
-            </div>
-            <div class="col-xs-4">
-                <a href="https://github.com/ziyasal/rdash-angular2/blob/master/README.md" target="_blank">
-                    About
-                </a>
-            </div>
-            <div class="col-xs-4">
-                <a href="javascript:void(0)">
-                    Support
-                </a>
-            </div>
-        </div>
     </div>
     <div id="content-wrapper">
         <div class="page-content">
