--- a/client/app/components/prio/prio.component.html
+++ b/client/app/components/prio/prio.component.html
@@ -4,7 +4,7 @@
         <a class="completed" routerLink="/xmlImport"><div>{{'xmlImport' | translate}}</div></a>
         <a class="completed" routerLink="/prediction"><div>{{'prediction_planning' | translate}}</div></a>
         <a class="completed" routerLink="/materialPlanning"><div>{{'material_Planning' | translate}}</div></a>
-        <a class="completed" routerLink="//materialPlanningEP"><div>{{'material_Planning' | translate}} 2</div></a>
+        <a class="completed" routerLink="//materialPlanningEP"><div>{{'mpEP_MaterialPlanningEP' | translate}}</div></a>
         <a class="active" routerLink="/prioritization"><div>{{'sidebar_prio' | translate}}</div></a>
         <a class="" routerLink="/capacityPlanning"><div>{{'capacity_planning' | translate}}</div></a>
         <a class="" routerLink="/xmlExport"><div>{{'xmlExport' | translate}}</div></a>
