--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="app/components/xmlImport/xmlImport.component.css">
     <link rel="stylesheet" href="app/components/capacityPlanning/capacityPlanning.component.css">
     <link rel="stylesheet" href="app/components/dashboard/dashboard.component.css">
+    <link rel="stylesheet" href="app/components/materialPlanningEP/materialPlanningEP.component.css">
     <link rel="stylesheet" href="node_modules/ng2-dnd/style.css">
 
 
