--- a/client/app/components/overview/warehousestock/warehousestock.component.html
+++ b/client/app/components/overview/warehousestock/warehousestock.component.html
@@ -13,14 +13,17 @@
             </div>
         </div>
     </div>
+    <br>
     <div class="row">
         <div class="col-md-10">
             <table class="table table-responsive table-condensed">
                 <tr>
                     <th *ngFor="let label of lineChartLabels">{{label}}</th>
                 </tr>
-                <tr *ngFor="let d of lineChartData">
-                    <td *ngFor="let label of lineChartLabels; let j=index">{{d.data[j]}}</td>
+                <tr *ngFor="let d of lineChartData; let jd=index">
+                    <td *ngFor="let label of lineChartLabels; let j=index">
+                        <span *ngIf="jd == 0">{{d.data[j]}}</span>
+                    </td>
                 </tr>
             </table>
         </div>
