MP: bestand n. WE

--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -81,11 +81,7 @@
                 </ul>
             </div>
         </td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="text-center" *ngFor="let b of m.bestandnWe">{{b}}</td>
     </tr>
     </tbody>
 </table>
