MP neu laden abh. Periode und etc

--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -14,7 +14,7 @@
 
 <body ng-app="myApp">
 
-<table class="table-responsive table-bordered table-striped" onload="setLayout()">
+<table width="100%" class="table-responsive table-bordered table-striped" onload="setLayout()">
     <caption width="100%" class="text-center">{{'material_Planning' | translate}}</caption>
     <thead>
     <tr>
