--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="app/components/capacityPlanning/capacityPlanning.component.css">
     <link rel="stylesheet" href="app/components/dashboard/dashboard.component.css">
     <link rel="stylesheet" href="app/components/materialPlanningEP/materialPlanningEP.component.css">
+    <link rel="stylesheet" href="app/components/materialPlanning/materialPlanning.css">
     <link rel="stylesheet" href="node_modules/ng2-dnd/style.css">
 
 
