--- a/client/app/components/materialPlanning/materialPlanning.css
+++ b/client/app/components/materialPlanning/materialPlanning.css
@@ -1,4 +1,3 @@
-.red {
-    /*background-color: rgba(247, 3, 15, 0.29);*/
-    color: lightpink;
+.redlining {
+    background-color : lightcoral;
 }
